# confyg

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: cicd.yml
examples/: env.rs  env_str.rs  file.rs  file_none.rs  file_none_with_defaults.rs  file_search.rs  file_struct.rs  files.rs  full.rs  simple.rs
examples/confs/: common-dotted.toml  common-under.toml  prod-dotted.toml  testing-dotted.toml  testing-under.toml
src/: lib.rs
src/conf/: confygery.rs  merger.rs  mod.rs  options.rs
src/env/: mod.rs  model.rs  options.rs  parser.rs  scanner.rs
src/searchpath/: errors.rs  finder.rs  mod.rs  options.rs
tests/env/: parser.rs  scanner.rs
tests/searchpath/: finder.rs
