[package]
name = "confyg"
description = "A simple, TOML-based, ENV-enabled library that can find and merge configs"
readme = "README.md"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/confyg"
documentation = "https://docs.rs/confyg/"
categories = ["configuration"]
keywords = ["config", "toml", "settings", "env", "environment"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "confyg"

[dependencies]
config = "0.13.2"
directories = "4.0"
toml = "0.5.9"
