[package]
name = "confyg"
description = "A simple, TOML-based, ENV-enabled library that can find and merge configs"
readme = "README.md"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/confyg"
documentation = "https://docs.rs/confyg/"
categories = ["config"]
keywords = ["configuration", "toml", "settings", "env", "environment"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "confyg"

[dependencies]
serde = "1.0"
directories = "4.0"
toml = "0.5.9"

[dev-dependencies]
serde_derive = "1.0"

[[example]]
name = "env"

[[example]]
name = "env_str"

[[example]]
name = "file"

[[example]]
name = "file_search"

[[example]]
name = "full"

[[example]]
name = "simple"
